--- a/web/package.json
+++ b/web/package.json
@@ -8,12 +8,18 @@
     "build": "next build",
     "start": "next start"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "next": "^9.1.6",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "next": "^9.0.7",
+    "react": "^16.10.2",
+    "react-dom": "^16.10.2",
+    "axios": "0.19.0"
+  },
+  "devDependencies": {
+    "typescript": "^3.6.3",
+    "@types/react": "^16.9.5",
+    "@types/react-dom": "^16.9.1",
+    "@types/node": "^12.7.11",
+    "@types/next": "^8.0.6",
+    "@types/axios": "^0.14.0"
   }
 }
