--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,14 +3,12 @@ FROM node:10.16-alpine
 WORKDIR /web
 
 
-COPY ./ts_next/package.json ./package.json
-
+COPY package*.json ./
 
 
 RUN apk update && \
     apk add git && \
-    npm install -g yarn &&\
-    yarn
-
+    npm install -g npm && \
+    npm install
 
 CMD ["npm", "run", "dev"]
