--- a/web/package.json
+++ b/web/package.json
@@ -19,7 +19,6 @@
     "@types/react": "^16.9.5",
     "@types/react-dom": "^16.9.1",
     "@types/node": "^12.7.11",
-    "@types/next": "^8.0.6",
-    "@types/axios": "^0.14.0"
+    "@types/next": "^8.0.6"
   }
 }
