--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,6 +16,7 @@ services:
     volumes: 
       - ./web:/web
       - /web/node_modules
+      #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
     ports:
       - 3000:3000
     depends_on:
