--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -1,3 +1,4 @@
+
 FROM node:10.16-alpine
 
 WORKDIR /web
@@ -5,10 +6,12 @@ WORKDIR /web
 
 COPY package*.json ./
 
-
 RUN apk update && \
     apk add git && \
     npm install -g npm && \
     npm install
+
+# ENV HOST 0.0.0.0
+# EXPOSE 3000
 
 CMD ["npm", "run", "dev"]
