--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,27 +1,27 @@
 version: "3"
 
 services: 
-  api:
-    container_name: api
-    build: ./api
-    volumes: 
-      - ./api:/go/src/github.com/s14228so/todo/api
-    ports:
-      - 8080:8080   
-    links:
-      - db
-  web: 
-    container_name: web
-    build: ./web
-    volumes: 
-      - ./web:/web
-      - /web/node_modules
-      - /web/.next
-      #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
-    ports:
-      - 3000:3000
-    depends_on:
-      - api
+  # api:
+  #   container_name: api
+  #   build: ./api
+  #   volumes: 
+  #     - ./api:/go/src/github.com/s14228so/todo/api
+  #   ports:
+  #     - 8080:8080
+    # links:
+    #   - db
+  # web: 
+  #   container_name: web
+  #   build: ./web
+  #   volumes: 
+  #     - ./web:/web
+  #     - /web/node_modules
+  #     - /web/.next
+  #     #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
+  #   ports:
+  #     - 3000:3000
+  #   depends_on:
+  #     - api
   db:
     container_name: db
     image: mysql:8.0.15
