--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -5,6 +5,8 @@ ENV GO111MODULE=on
 WORKDIR $GOPATH/src/github.com/s14228so/todo/api
 
 
+WORKDIR /go/src/github.com/s14228so/todo/api
+ADD . /go/src/github.com/s14228so/todo/api
 
 RUN apk update \ 
     && apk add --no-cache git
@@ -15,6 +17,6 @@ RUN apk update \
 # RUN go mod download
 
 
-CMD ["go", "run", "main.go"]
+# CMD ["go", "run", "main.go"]
 
 
