--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,15 @@
 version: "3"
 
 services: 
-  # api:
-  #   container_name: api
-  #   build: ./api
-  #   volumes: 
-  #     - ./api:/go/src/github.com/s14228so/todo/api
-  #   ports:
-  #     - 8080:8080
-    # links:
-    #   - db
+  api:
+    container_name: api
+    build: ./api
+    volumes: 
+      - ./api:/go/src/github.com/s14228so/todo/api
+    ports:
+      - 8080:8080
+    links:
+      - db
   # web: 
   #   container_name: web
   #   build: ./web
