--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - ./api:/go/src/github.com/s14228so/todo/api
     ports:
       - 8080:8080
-    links:
+    depends_on:
       - db
   # web: 
   #   container_name: web
@@ -32,3 +32,4 @@ services:
     environment: 
       MYSQL _DATABASE: todo
       MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    command: mysqld
