--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,18 +10,18 @@ services:
       - 8080:8080
     depends_on:
       - db
-  # web: 
-  #   container_name: web
-  #   build: ./web
-  #   volumes: 
-  #     - ./web:/web
-  #     - /web/node_modules
-  #     - /web/.next
-  #     #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
-  #   ports:
-  #     - 3000:3000
-  #   depends_on:
-  #     - api
+  web: 
+    container_name: web
+    build: ./web
+    volumes: 
+      - ./web:/web
+      - /web/node_modules
+      - /web/.next
+      #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
+    ports:
+      - 3000:3000
+    depends_on:
+      - api
   db:
     container_name: db
     image: mysql:8.0.15
