--- a/web/package.json
+++ b/web/package.json
@@ -9,10 +9,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "axios": "0.19.0",
     "next": "^9.0.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
-    "axios": "0.19.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "typescript": "^3.6.3",
