--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "0.19.0",
+    "mobx": "^5.15.1",
+    "mobx-react": "^6.1.4",
     "next": "^9.0.7",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
