--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,8 +24,8 @@ services:
       #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
     ports:
       - 3000:3000
-    depends_on:
-      - api
+    # depends_on:
+    #   - api
     command: npm run dev
   # db:
   #   container_name: db
