--- a/web/package.json
+++ b/web/package.json
@@ -1,27 +1,23 @@
 {
-  "name": "web",
+  "name": "with-typescript",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "type-check": "tsc"
   },
   "dependencies": {
-    "axios": "0.19.0",
-    "mobx": "^5.15.1",
-    "mobx-react": "^6.1.4",
-    "next": "^9.0.7",
-    "react": "^16.10.2",
-    "react-dom": "^16.10.2",
-    "redux": "^4.0.5"
+    "isomorphic-unfetch": "3.0.0",
+    "next": "latest",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
-    "typescript": "^3.6.3",
-    "@types/react": "^16.9.5",
-    "@types/react-dom": "^16.9.1",
-    "@types/node": "^12.7.11",
-    "@types/next": "^8.0.6"
-  }
+    "@types/node": "^12.12.21",
+    "@types/react": "^16.9.16",
+    "@types/react-dom": "^16.9.4",
+    "typescript": "3.7.3"
+  },
+  "license": "ISC"
 }
