--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,37 @@
 version: "3"
 
 services: 
-  # api:
-  #   container_name: api
-  #   build: ./api
-  #   volumes: 
-  #     - ./api:/go/src/github.com/s14228so/todo/api
-  #   ports:
-  #     - 8080:8080
-  #   depends_on:
-  #     - db
-  #   tty: true
-
-    
+  api:
+    container_name: api
+    build: ./api
+    volumes: 
+      - ./api:/go/src/github.com/s14228so/todo/api
+    ports:
+      - 8080:8080
+    depends_on:
+      - db
+    tty: true
 
   web: 
     container_name: web
     build: ./web
     volumes: 
-      - ./web:/web
-      - /web/node_modules
-      - /web/.next
+      - ./web:/src
+      # - /web/node_modules
       #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
     ports:
       - 3000:3000
     # depends_on:
     #   - api
     command: npm run dev
-  # db:
-  #   container_name: db
-  #   image: mysql:8.0.15
-  #   volumes: 
-  #     - ./api/tmp/mysql:/var/lib/mysql
-  #   ports: 
-  #     - 3306:3306
-  #   environment: 
-  #     MYSQL _DATABASE: todo
-  #     MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
-  #   command: mysqld
+  db:
+    container_name: db
+    image: mysql:8.0.15
+    volumes: 
+      - ./api/tmp/mysql:/var/lib/mysql
+    ports: 
+      - 3306:3306
+    environment: 
+      MYSQL _DATABASE: todo
+      MYSQL_ALLOW_EMPTY_PASSWORD: "yes"
+    command: mysqld
