--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,12 @@ services:
     build: ./web
     volumes: 
       - ./web:/src
-      - /web/node_modules
+      - /src/node_modules
       #data volumeで優先させる。(node_modulesだけホストからマウントされないようにする)
     ports:
       - 3000:3000
-    # depends_on:
-    #   - api
+    depends_on:
+      - api
     command: npm run dev
   db:
     container_name: db
