--- a/web/package.json
+++ b/web/package.json
@@ -12,7 +12,8 @@
     "isomorphic-unfetch": "3.0.0",
     "next": "latest",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "@types/node": "^12.12.21",
