--- a/web/tsconfig.json
+++ b/web/tsconfig.json
@@ -26,6 +26,8 @@
   ],
   "include": [
     "**/*.ts",
-    "**/*.tsx"
+    "**/*.tsx",
+    "store/index.js",
+    "components/AddTodo.jsx"
   ]
 }
