--- a/web/package.json
+++ b/web/package.json
@@ -1,25 +1,17 @@
 {
-  "name": "with-typescript",
-  "version": "1.0.0",
+  "name": "todo-next",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "next",
+    "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "type-check": "tsc"
+    "start": "next start"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "isomorphic-unfetch": "3.0.0",
-    "next": "latest",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "redux": "^4.0.5"
-  },
-  "devDependencies": {
-    "@types/node": "^12.12.21",
-    "@types/react": "^16.9.16",
-    "@types/react-dom": "^16.9.4",
-    "typescript": "3.7.3"
-  },
-  "license": "ISC"
+    "next": "9.1.6",
+    "react": "16.12.0",
+    "react-dom": "16.12.0",
+    "redux": "^4.0.5",
+    "uuid": "^3.3.3"
+  }
 }
