--- a/web/package.json
+++ b/web/package.json
@@ -10,10 +10,17 @@
   "dependencies": {
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
+    "axios": "^0.19.0",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "redux": "^4.0.5",
     "uuid": "^3.3.3"
+  },
+  "devDependencies": {
+    "@types/node": "^13.1.1",
+    "@types/react": "^16.9.17",
+    "@types/uuid": "^3.4.6",
+    "typescript": "^3.7.4"
   }
 }
