--- a/web/package.json
+++ b/web/package.json
@@ -11,11 +11,14 @@
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
+    "firebase": "^7.6.1",
     "next": "9.1.6",
     "react": "16.12.0",
     "react-dom": "16.12.0",
     "redux": "^4.0.5",
-    "uuid": "^3.3.3"
+    "uuid": "^3.3.3",
+    "@types/dotenv-webpack": "^1.7.0",
+    "dotenv-webpack": "^1.7.0"
   },
   "devDependencies": {
     "@types/node": "^13.1.1",
