--- a/web/package.json
+++ b/web/package.json
@@ -11,7 +11,6 @@
     "@material-ui/core": "^4.8.1",
     "@material-ui/icons": "^4.5.1",
     "axios": "^0.19.0",
-    "dotenv": "^8.2.0",
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.6.1",
     "next": "9.1.6",
@@ -25,5 +24,8 @@
     "@types/react": "^16.9.17",
     "@types/uuid": "^3.4.6",
     "typescript": "^3.7.4"
+  },
+  "resolutions": {
+    "jss": "10.0.0"
   }
 }
