--- a/web/Dockerfile
+++ b/web/Dockerfile
@@ -3,10 +3,14 @@ FROM node:10.16-alpine
 
 WORKDIR /src
 
-COPY . .
 
-RUN  rm -rf /src/node_modules \
-    && rm -rf /src/package-lock.json \
-    && yarn
+RUN npm install -g yarn
+
+COPY package.json .
+COPY yarn.lock .
+
+RUN yarn
+
+COPY . .
 
 CMD ["yarn", "dev"]
