--- a/web/package.json
+++ b/web/package.json
@@ -14,8 +14,10 @@
     "dotenv-webpack": "^1.7.0",
     "firebase": "^7.6.1",
     "next": "9.1.6",
+    "next-redux-wrapper": "^4.0.1",
     "react": "16.12.0",
     "react-dom": "16.12.0",
+    "react-redux": "^7.1.3",
     "redux": "^4.0.5",
     "uuid": "^3.3.3"
   },
